configsync/tenants/fltenant1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: # kpt-merge: /ns
  name: fltenant1 # kpt-set: ${tenant-name}
  labels:
    tenant-ns: "true"
    # version must match the ASM control plane revision
    # istio.io/rev: asm-110 # kpt-set: ${istio-revision}
